Fix contact section MOBILE & TABLET version

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -267,6 +267,34 @@
         color: #fff;
     }
 
+    .contactBtnSection{
+        border: 4px solid $primary;
+        background-color: transparent;
+        padding: 32px;
+        border-radius: 64px;
+        display: block;
+        margin: auto auto 24px auto;
+        font-size: 16px;
+        font-weight: 600;
+        color: white;
+        text-transform: uppercase;
+        cursor: pointer;
+    }
+    
+    .devisBtnSection{
+        border: 4px solid $primary;
+        background-color: $primary;
+        padding: 32px;
+        border-radius: 64px;
+        display: block;
+        margin: auto;
+        font-size: 16px;
+        font-weight: 600;
+        color: white;
+        text-transform: uppercase;
+        cursor: pointer;
+    }
+
     @keyframes videoBtnAnim {
         0% {
             -webkit-transform: scale(0.8);
@@ -412,6 +440,34 @@
     .banner-one__video:hover {
         background-color: $primary;
         color: #fff;
+    }
+
+    .contactBtnSection{
+        border: 4px solid $primary;
+        background-color: transparent;
+        padding: 32px;
+        border-radius: 64px;
+        display: block;
+        margin: auto auto 24px auto;
+        font-size: 16px;
+        font-weight: 600;
+        color: white;
+        text-transform: uppercase;
+        cursor: pointer;
+    }
+    
+    .devisBtnSection{
+        border: 4px solid $primary;
+        background-color: $primary;
+        padding: 32px;
+        border-radius: 64px;
+        display: block;
+        margin: auto;
+        font-size: 16px;
+        font-weight: 600;
+        color: white;
+        text-transform: uppercase;
+        cursor: pointer;
     }
 
     @keyframes videoBtnAnim {
