--- a/src/sass/layouts/_contact.scss
+++ b/src/sass/layouts/_contact.scss
@@ -1,3 +1,5 @@
+
+@media (min-width: 1200px){
 .contactNous{
     background-image: url(../images/bg_contact.png);
     background-size: cover;
@@ -32,4 +34,82 @@
         margin: auto;
     }
 }
+}
 
+@media (min-width: 320px) and (max-width: 480px){
+    .contactNous{
+        background-image: url(../images/bg_contact.png);
+        background-size: cover;
+        height: 600px;
+        background-position: 32%;
+        background-attachment: fixed;
+        margin-bottom: 120px;
+        &__container{
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: max-content max-content;
+            margin: auto;
+            padding: 8rem 0rem;
+            width: 88%;
+        }
+        &__titles{
+            grid-area: 1/1;
+            h3{
+                font-family: $fontS;
+                font-size: 40px;
+                text-align: center;
+                color: white;
+                
+            }
+            h4{
+                font-size: 32px;
+                text-align: center;
+                color: white;
+                font-weight: 700;
+            }
+        }
+        &__btns{
+            grid-area: 2/1;
+            margin: auto;
+        }
+    }
+}
+
+@media (min-width: 600px)and (max-width: 1024px){
+    .contactNous{
+        background-image: url(../images/bg_contact.png);
+        background-size: cover;
+        height: 600px;
+        background-position: 32%;
+        background-attachment: fixed;
+        margin-bottom: 120px;
+        &__container{
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: max-content max-content;
+            margin: auto;
+            padding: 8rem 0rem;
+            width: 88%;
+        }
+        &__titles{
+            grid-area: 1/1;
+            h3{
+                font-family: $fontS;
+                font-size: 40px;
+                text-align: center;
+                color: white;
+                
+            }
+            h4{
+                font-size: 32px;
+                text-align: center;
+                color: white;
+                font-weight: 700;
+            }
+        }
+        &__btns{
+            grid-area: 2/1;
+            margin: auto;
+        }
+    }
+}
